--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <ng-map center="-25.363882,131.044922" zoom="17">
+  <marker position="-25.363882,131.044922" title="Hello World!"></marker>
+</ng-map>
   </body>
 </html>
